--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/gray"
         android:ems="10"
+        android:textColor="@color/white"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:textColorHint="@color/gray"
@@ -38,6 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:ems="10"
+        android:textColor="@color/white"
         android:backgroundTint="@color/gray"
         android:textColorHint="@color/gray"
         android:hint="Password"
